# zaft

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_push.yml  mirroring.yaml  test_sve.yml
app/: Cargo.toml
app/benches/fft/: main.rs
app/benches/rfft/: main.rs
app/src/: main.rs  plotter.rs  raders_reshuffle.rs  split_radix.rs
fuzz/: Cargo.toml
fuzz/double_precision/: double_precision.rs
fuzz/double_real_complex/: double_real_complex.rs
fuzz/single_precision/: single_precision.rs
fuzz/single_real_complex/: single_real_complex.rs
src/: bluestein.rs  butterflies.rs  c2r.rs  complex_fma.rs  dft.rs  err.rs  factory.rs  factory64.rs  fast_divider.rs  good_thomas.rs  good_thomas_small.rs  lib.rs  mixed_radix.rs  mla.rs  prime_factors.rs  r2c.rs  r2c_twiddles.rs  raders.rs  radix10.rs  radix11.rs  radix13.rs  radix2.rs  radix3.rs  radix4.rs  radix5.rs  radix6.rs  radix7.rs  short_butterflies.rs  spectrum_arithmetic.rs  store.rs  traits.rs  transpose.rs  transpose_arbitrary.rs  util.rs
src/avx/: butterflies.rs  c2r.rs  c2r_expand.rs  f32x2_2x2.rs  f32x2_4x4.rs  f32x2_6x6.rs  f32x2_7x7.rs  f32x2_8x4.rs  f64x2_2x2.rs  f64x2_4x4.rs  mod.rs  r2c.rs  raders.rs  radix10.rs  radix11.rs  radix13.rs  radix2.rs  radix3.rs  radix4.rs  radix5.rs  radix6.rs  radix7.rs  rotate.rs  spectrum_arithmetic.rs  util.rs
src/avx/butterflies/: bf10.rs  bf100.rs  bf100d.rs  bf100f.rs  bf1024d.rs  bf1024f.rs  bf108d.rs  bf108f.rs  bf11.rs  bf12.rs  bf121d.rs  bf121f.rs  bf125d.rs  bf125f.rs  bf128d.rs  bf128f.rs  bf13.rs  bf14.rs  bf144d.rs  bf144f.rs  bf15.rs  bf16.rs  bf169d.rs  bf169f.rs  bf17.rs  bf18.rs  bf19.rs  bf192d.rs  bf192f.rs  bf2.rs  bf20.rs  bf2048d.rs  bf2048f.rs  bf216d.rs  bf216f.rs  bf21d.rs  bf21f.rs  bf23.rs  bf243d.rs  bf243f.rs  (+64 more)
src/avx/mixed/: avx_store.rs  avx_stored.rs  avx_storef.rs  mixed_radix.rs  mixed_radix_c2r_d.rs  mixed_radix_c2r_f.rs  mixed_radix_r2c.rs  mod.rs
src/avx/transpose/: block.rs  block_c2r.rs  block_c2r_oddf.rs  f32x2_2x2.rs  f32x2_4x11.rs  f32x2_4x4.rs  f32x2_4xn.rs  f32x2_6x6.rs  f32x2_7x7.rs  f32x2_8x3.rs  f32x2_8x4.rs  f32x2_8xn.rs  f64x2_2x2.rs  f64x2_2xn.rs  f64x2_4x4.rs  f64x2_6x2.rs  f64x2_6x6.rs  f64x4_4xn.rs  mod.rs  sse_f32x4_4xn.rs  transpose_5x5.rs  transpose_real_d.rs  transpose_real_s.rs
src/butterflies/: bf1.rs  bf10.rs  bf11.rs  bf12.rs  bf13.rs  bf14.rs  bf15.rs  bf16.rs  bf17.rs  bf18.rs  bf19.rs  bf2.rs  bf20.rs  bf23.rs  bf25.rs  bf27.rs  bf29.rs  bf3.rs  bf31.rs  bf32.rs  bf37.rs  bf4.rs  bf41.rs  bf5.rs  bf6.rs  bf7.rs  bf8.rs  bf9.rs  fast_bf16.rs  fast_bf7.rs  fast_bf8.rs  fast_bf9.rs  mod.rs  short_butterflies.rs  util.rs
src/neon/: butterflies.rs  c2r.rs  c2r_expand.rs  c2r_fcma.rs  f32x2_2x2.rs  f32x2_4x4.rs  f32x2_6x4.rs  f32x2_6x6.rs  f32x2_7x7.rs  f64x2_2x2.rs  mod.rs  r2c.rs  r2c_fcma.rs  raders.rs  radix10.rs  radix10_fcma.rs  radix11.rs  radix11_fcma.rs  radix13.rs  radix13_fcma.rs  radix2.rs  radix2_fcma.rs  radix3.rs  radix3_fcma.rs  radix4.rs  radix4_fcma.rs  radix5.rs  radix5_fcma.rs  radix6.rs  radix6_fcma.rs  radix7.rs  radix7_fcma.rs  spectrum_arithmetic.rs  spectrum_arithmetic_fcma.rs  util.rs
src/neon/butterflies/: bf10.rs  bf100.rs  bf100_fcma.rs  bf100d.rs  bf100d_fcma.rs  bf100f.rs  bf1024.rs  bf108d.rs  bf108f.rs  bf10_fcma.rs  bf11.rs  bf11_fcma.rs  bf12.rs  bf121d.rs  bf121d_fcma.rs  bf121f.rs  bf121f_fcma.rs  bf125d.rs  bf125f.rs  bf128d.rs  bf128d_fcma.rs  bf128f.rs  bf128f_fcma.rs  bf12_fcma.rs  bf13.rs  bf13_fcma.rs  bf14.rs  bf144d.rs  bf144f.rs  bf14_fcma.rs  bf15.rs  bf15_fcma.rs  bf16.rs  bf169d.rs  bf169f.rs  bf16_fcma.rs  bf17.rs  bf17_fcma.rs  bf18.rs  bf19.rs  (+101 more)
src/neon/mixed/: bf10.rs  bf11.rs  bf12.rs  bf13.rs  bf14.rs  bf15.rs  bf16.rs  bf18.rs  bf2.rs  bf3.rs  bf4.rs  bf5.rs  bf6.rs  bf7.rs  bf8.rs  bf9.rs  mixed_radix.rs  mixed_radix_c2r_d.rs  mixed_radix_c2r_f.rs  mixed_radix_r2c.rs  mod.rs  neon_store.rs
src/neon/transpose/: blocks.rs  f32x2_11x2.rs  f32x2_2x10.rs  f32x2_2x11.rs  f32x2_2x12.rs  f32x2_2x2.rs  f32x2_2x9.rs  f32x2_2xn.rs  f32x2_4x3.rs  f32x2_4x4.rs  (+16 more)
src/r2c/: c2r.rs  c2r_factory.rs  c2r_factory_d.rs  c2r_factory_f.rs  c2r_odd.rs  c2r_twiddles.rs  factory_d.rs  factory_f.rs  mixed_radix_r2c_odd.rs  mod.rs  r2c.rs  r2c_factory.rs  r2c_factory_d.rs  r2c_factory_f.rs  r2c_twiddles.rs  real_factory.rs  real_to_complex.rs  rfft_bluestein.rs  rfft_raders.rs  strategy.rs  strategy_c2r.rs  strategy_r2c.rs
src/sve/: mod.rs  raders_indicer.rs
src/td/: mod.rs  td_c2c.rs  td_c2r.rs  td_r2c.rs
(+17 files in other folders)
