workspace = { members = ["app"] }

[package]
name = "zaft"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
pxfm = "^0.1.3"
num-integer = "0.1.46"
strength_reduce = "0.2.4"

[dev-dependencies]
rand = "0.9"

[features]
default = ["neon", "avx"]
neon = []
fcma = ["neon"]
avx = []