workspace = { members = ["app"], exclude = ["fuzz"] }

[package]
name = "zaft"
version = "0.1.3"
edition = "2024"
description = "Fast fourier transform"
readme = "README.md"
keywords = ["fft", "dft", "discrete", "fourier"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/zaft"
categories = ["algorithms", "science"]
homepage = "https://github.com/awxkee/zaft"
repository = "https://github.com/awxkee/zaft"
exclude = ["*.jpg", "/assets", "*.png", "*.sh", "/assets/*"]
rust-version = "1.87.0"

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
pxfm = "^0.1.24"
num-integer = "0.1.46"
strength_reduce = "0.2.4"

[dev-dependencies]
rand = "0.9"

[features]
default = ["neon", "avx"]
# Aarch64 NEON intrinsics
neon = []
# Aarch64 FCMA feature, required nightly
fcma = ["neon"]
# x86_64 AVX intrinsics
avx = []