[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
rustfft = { version = "6.4", default-features = false, features = ["avx", "neon"] }
zaft = { path = "../", features = ["fcma", "avx"], default-features = false }
num-complex = "0.4.6"
rand = "0.9"
criterion = "0.8.0"
realfft = "3.5"

[dev-dependencies]
criterion = "0.8.0"
rand = "0.9"

[[bench]]
name = "fft"
harness = false